Add birth date API functionality
