# module/User/src/Model/Enums/ApiPermissions.php
@@ -16,6 +16,11 @@ enum ApiPermissions: string
     case MembersPropertyKeyholder = 'members_read_keyholder';
     case MembersPropertyType = 'members_read_type';
     case MembersActiveR = 'members_active_read';
+    case MembersEmail = 'members_read_email';
+    case MembersBirth = 'members_read_birthdate';
+    case MembersAge16 = 'members_read_is16';
+    case MembersAge18 = 'members_read_is18';
+    case MembersAge21 = 'members_read_is21';
     case OrgansMembershipR = 'organs_members_read';
     case All = '*';
 
@@ -33,6 +38,11 @@ enum ApiPermissions: string
             self::MembersActiveR => $translator->translate(
                 'Get active Members (members that are in one or more organs)',
             ),
+            self::MembersEmail => $translator->translate('Get member email address'),
+            self::MembersBirth => $translator->translate('Get member birthdate'),
+            self::MembersAge16 => $translator->translate('Check if a member has reached age 16'),
+            self::MembersAge18 => $translator->translate('Check if a member has reached age 18'),
+            self::MembersAge21 => $translator->translate('Check if a member has reached age 21'),
             self::OrgansMembershipR => $translator->translate('Read organ membership (per user/organ)'),
             self::All => $translator->translate('All API permissions'),
         };
